syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.proto";
option java_outer_classname = "HelloProto";
option objc_class_prefix = "HLW";

package service;

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}